Lake Ingalls trail review

--- a/index.html
+++ b/index.html
@@ -1,10 +1,114 @@
-<!DOCTYPE HTML>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-<meta charset="utf-8">
-<title>Hello, World!</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>My Favorite Hiking Trail in Central Washington</title>
+  <link rel="stylesheet" href="styles_1.css" />
 </head>
 <body>
-Hello, World!
+  <header>
+    <div class="container">
+      <h1>My Favorite Trail in Central Washington</h1>
+      <p class="tagline">A simple review and guide for fellow hikers in the PNW!</p>
+    </div>
+  </header>
+
+  <main class="container">
+    <section class="intro">
+      <h2>Trail Overview</h2>
+      <p><strong>Trail Name:</strong>Lake Ingalls Trail</p>
+      <p><strong>Location:</strong>Alpine Lakes Wilderness, Central Washington</p>
+      <p>
+        The Ingalls Lake Trail is one of my favorite trails in Washington because of its mix of forests, 
+        views, and the feeling of being just far enough from everything. Below, I’ve put
+        together my own quick review, tips, and a link to more details!
+      </p>
+    </section>
+
+    <section class="quick-facts">
+      <h2>Quick Facts</h2>
+      <ul>
+        <li><strong>Distance:</strong>9 miles round trip</li>
+        <li><strong>Elevation Gain:</strong>2,500 ft</li>
+        <li><strong>Difficulty:</strong>Hard</li>
+        <li><strong>Best Season:</strong>Late spring to mid fall</li>
+        <li><strong>Dog Friendly:</strong> No, dogs are not allowed at Lake Ingalls. They are only
+            allowed until Esmeralda Basin, which is about 1 mile before the lake./li>
+      </ul>
+    </section>
+
+    <section class="review">
+      <h2>My Review</h2>
+      <p>
+        I love this trail because it feels like the perfect mix of challenge,
+        beauty, and a great reward. The first mile is a gentle warm-up, and then the switchbacks kick
+        in and reward you with awesome views of the surrounding Stuart Range. Depending on the time of year,
+        you might see wildflowers (summer), bright orange larches (fall), or even some lingering snow patches (spring).
+      </p>
+      <p>
+        On clear days you can see Mount Stuart, towering just to the northeast of the lake.
+        This is also the route climbers take to reach Mount Stuart’s summit, so you’ll see
+        a few folks with packs and climbing gear heading up or down.
+      </p>
+      <p>Be aware that this trail can be quite challenging in sections and requires good physical fitness. Additionally,
+        the trail can be crowded during peak seasons, so starting early in the day is advisable to avoid the crowds.
+        Finally, this part of the Alpine Lakes Wilderness is home to mountain goats, so be cautious and 
+        give them plenty of space if you encounter any.
+      </p>
+
+      <div class="pros-cons">
+        <div class="box">
+          <h3>Pros</h3>
+          <ul>
+            <li>Great views for relatively little driving</li>
+            <li>Fun but manageable elevation gain</li>
+            <li>Good mix of shade and open viewpoints</li>
+          </ul>
+        </div>
+        <div class="box">
+          <h3>Cons</h3>
+          <ul>
+            <li>Popular and overcrowded on weekends and holidays</li>
+            <li>Limited parking at trailhead</li>
+            <li>Can be buggy in early summer</li>
+          </ul>
+        </div>
+      </div>
+    </section>
+
+    <section class="photo">
+      <h2>Trail Photo</h2>
+      <figure>
+        <img
+          src="my-trail-photo.jpg"
+          alt="View from my favorite trail in Central Washington"
+        />
+        <figcaption>One of my favorite spots at the lake.</figcaption>
+      </figure>
+    </section>
+
+    <section class="more-info">
+      <h2>More Information</h2>
+      <p>
+        For detailed maps, recent reviews, and trail conditions, check out the
+        trail page below:
+        <a
+          href="https://www.wta.org/go-hiking/hikes/lake-ingalls"
+          target="_blank"
+          rel="noopener noreferrer"
+          class="button-link"
+        >
+          View this trail on Washington Trails Association
+        </a>
+      </p>
+    </section>
+  </main>
+
+  <footer>
+    <div class="container">
+      <p>&copy; 2025 My Trail Review • Made with HTML &amp; CSS</p>
+    </div>
+  </footer>
 </body>
 </html>
